--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuesax": "^3.12.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
