--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "material-icons": "^1.13.5",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuesax": "^3.12.2"
