--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
