--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "material-icons": "^1.13.5",
     "vue": "^3.2.47",
+    "vue-route": "^1.5.1",
     "vue-router": "^4.1.6",
     "vuesax": "^3.12.2"
   },
