--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "material-icons": "^1.13.5",
